2013-06-11  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Add ppc405,
	ppc440, ppc464, and ppc476, merging from ports/ dl-procinfo.c.
	* sysdeps/powerpc/dl-procinfo.h: Fix whitespace by correcting spaces
	with tabs where appropriate.
	[PPC_PLATFORM_PPC405]: Define new platform merging from ports/
	dl-procinfo.h.
	[PPC_PLATFORM_PPC440]: Likewise.
	[PPC_PLATFORM_PPC464]: Likewise.
	[PPC_PLATFORM_PPC476]: Likewise.
	(_dl_string_platform): Add support for detecting ppc405, ppc440,
	ppc464, and ppc476 platform strings merging from ports/
	dl-procinfo.h.

2013-05-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* manual/platform.texi: Add PowerPC PPR function set documentation.
	* sysdeps/powerpc/sys/platform/ppc.h: Add PowerPC PPR set function
	implementation.

2013-05-23  Edjunior Machado  <emachado@linux.vnet.ibm.com>

	* sysdeps/powerpc/sys/platform/ppc.h: Add __ppc_yield,
	__ppc_mdoio and __ppc_mdoom.
	* manual/platform.texi: Document new functions __ppc_yield,
	__ppc_mdoio and __ppc_mdoom.

2013-05-22  Edjunior Barbosa Machado  <emachado@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/bits/siginfo.h (siginfo_t): Add si_addr_lsb
	to _sifields.sigfault.
	(si_addr_lsb): Define new macro.
	(BUS_MCEERR_AR, BUS_MCEERR_AO): Define new values.
	* sysdeps/unix/sysv/linux/sparc/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/x86/bits/siginfo.h: Likewise.

2013-05-15  Edjunior Machado  <emachado@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/s390/bits/siginfo.h (siginfo_t): Remove
	si_trapno and add si_addr_lsb to _sifields.sigfault.
	(si_trapno): Remove macro.
	(si_addr_lsb): Define new macro.
	(BUS_MCEERR_AR, BUS_MCEERR_AO): Define new values.

2013-05-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ # 15497]
	* sysdeps/powerpc/fpu/e_hypot.c (GET_TWO_FLOAT_WORD): Fix test for
	negative infinity on POWER6 or lower.
	* sysdeps/powerpc/fpu/e_hypotf.c (GET_TWO_FLOAT_WORD): Likewise.
