@@ -1,3 +1,11 @@
+2013-06-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	[BZ #15605]
+	* sysdeps/generic/symbol-hacks.h: Add workaround for memset/memmove calls
+	generated by the compiler on loop optimizations.
+	* sysdeps/wordsize-32/symbol-hacks.h: Include next symbol-hacks.h for
+	general definitions.
+
 2013-06-11  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
 
 	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Add ppc405,
